change project name

--- a/standard-project.application/standardProject.Application.csproj
+++ b/standard-project.application/standardProject.Application.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>standard_project.application</RootNamespace>
+    <RootNamespace>standardProject.Application</RootNamespace>
   </PropertyGroup>
 
 </Project>
