--- a/standard-project.web-app/standardProject.WebApp.csproj
+++ b/standard-project.web-app/standardProject.WebApp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>standard_project.web_app</RootNamespace>
+    <RootNamespace>standardProject.WebApp</RootNamespace>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
   </PropertyGroup>
 
